--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application_3
+name: pakar_mobile
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -8,14 +8,20 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
+  dio: ^5.4.3+1
   file_picker: ^8.0.1
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
   flutter_secure_storage: ^9.0.0
+  go_router: ^14.0.2
   google_fonts: ^6.2.1
   http: ^1.2.1
+  http_parser: ^4.0.2
   infinite_scroll_pagination: ^4.0.0
+  remove_markdown: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +34,8 @@ flutter:
   assets:
     - .env
     - assets/
-    
+  
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/icon.png"
