--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_application_3",
-    "short_name": "flutter_application_3",
+    "name": "pakar_mobile",
+    "short_name": "pakar_mobile",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
